RESOLVED FIXED116451
Crash in convertMainResourceLoadToDownload when downloading file by option-return
https://bugs.webkit.org/show_bug.cgi?id=116451
Summary Crash in convertMainResourceLoadToDownload when downloading file by option-re...
d235j.1
Reported 2013-05-20 11:15:40 PDT
Created attachment 202296 [details] Crash log When downloading a loaded page by pressing option-return in the address bar, WebKit may crash with the attached error log. This happens mainly when downloading PDF files, since this is my most common use case, but I believe I've seen it with images and HTML as well. I am using the built-in Apple PDF viewer, not the Adobe Reader plugin, so this should not be a plug-in related issue.
Attachments
Crash log (52.61 KB, text/plain)
2013-05-20 11:15 PDT, d235j.1
no flags
Crash of debug WebKit build (61.68 KB, text/plain)
2013-05-23 11:08 PDT, d235j.1
no flags
Patch (9.03 KB, patch)
2013-05-23 12:46 PDT, Anders Carlsson
kling: review+
d235j.1
Comment 1 2013-05-23 11:08:50 PDT
Created attachment 202729 [details] Crash of debug WebKit build
d235j.1
Comment 2 2013-05-23 11:09:04 PDT
I've attached a crash log of a debug build of WebKit, which should be way more useful.
Anders Carlsson
Comment 3 2013-05-23 12:43:08 PDT
Anders Carlsson
Comment 4 2013-05-23 12:46:38 PDT
Andreas Kling
Comment 5 2013-05-23 13:06:15 PDT
Comment on attachment 202735 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=202735&action=review r=me > Source/WebKit2/NetworkProcess/NetworkConnectionToWebProcess.cpp:181 > + if (!mainResourceLoadIdentifier) { > + NetworkProcess::shared().downloadManager().startDownload(downloadID, request); > + return; > + } I think this could use a comment about what mainResourceLoadIdentifier=0 means.
Anders Carlsson
Comment 6 2013-05-23 13:07:55 PDT
Mary Wu
Comment 7 2013-06-16 21:23:04 PDT
*** Bug 114672 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.