Crash in convertMainResourceLoadToDownload when downloading file by option-return https://bugs.webkit.org/show_bug.cgi?id=116451

Reviewed by Andreas Kling.

Source/WebCore:

Handle MainResourceLoader being null here which will happen when loading a cached main resource.

* loader/DocumentLoader.cpp:
(WebCore::DocumentLoader::continueAfterContentPolicy):

Source/WebKit/mac:

If the main resource loader is null, create a new download instead since there's no existing loader to convert.

* WebCoreSupport/WebFrameLoaderClient.mm:
(WebFrameLoaderClient::convertMainResourceLoadToDownload):

Source/WebKit2:

If the main resource loader is null, create a new download instead since there's no existing loader to convert.

* NetworkProcess/NetworkConnectionToWebProcess.cpp:
(WebKit::NetworkConnectionToWebProcess::convertMainResourceLoadToDownload):
* WebProcess/WebPage/WebFrame.cpp:
(WebKit::WebFrame::convertMainResourceLoadToDownload):

Canonical link: https://commits.webkit.org/134992@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150609 268f45cc-cd09-0410-ab3c-d52691b4dbfc