Source/WebKit2/NetworkProcess/NetworkConnectionToWebProcess.cpp
@@ -175,6 +175,11 @@ void NetworkConnectionToWebProcess::startDownload(bool privateBrowsingEnabled, u
 
 void NetworkConnectionToWebProcess::convertMainResourceLoadToDownload(uint64_t mainResourceLoadIdentifier, uint64_t downloadID, const ResourceRequest& request, const ResourceResponse& response)
 {
+    if (!mainResourceLoadIdentifier) {
+        NetworkProcess::shared().downloadManager().startDownload(downloadID, request);
+        return;
+    }
+
     NetworkResourceLoader* loader = m_networkResourceLoaders.get(mainResourceLoadIdentifier);
     NetworkProcess::shared().downloadManager().convertHandleToDownload(downloadID, loader->handle(), request, response);
 
